# wagtail-modeladmin-sortable

./: LICENSE.txt  MANIFEST.in  README.md  setup.cfg
wagtail_modeladmin_sortable/: apps.py  forms.py  mixins.py  models.py  views.py
wagtail_modeladmin_sortable.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_modeladmin_sortable/static/css/: style.css
wagtail_modeladmin_sortable/static/js/: sortable.js
wagtail_modeladmin_sortable/templates/admin_sortable/: index.html
