[metadata]
name = wagtail-modeladmin-sortable
version = 0.0.1
description = A Wagtail app for drag-and-drop ordering for objects in the admin interface
long_description_content_type = 'text/markdown',
long_description = file: README.md
url = https://github.com/stanlazarov/wagtail-modeladmin-sortable
download_url = https://github.com/stanlazarov/wagtail-modeladmin-sortable/archive/refs/tags/v0.0.1.tar.gz
author = Stanislav Lazarov
author_email = stannlazarov@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.6
install_requires =
    Django >= 3.1 
    wagtail >= 2.1